SD-2257: Fix multiple and combined checks so they can have relevance and also updated more conditional checks